# g4sipm

./: .gitmodules  CMakeLists.txt  CMakeMacros.cmake  README.md
fast/: CMakeLists.txt  fast.cc  g4sipm.mac  ps.mac
fast/include/: FastActionInitialization.hh  FastEffectiveCellsFiredDigitizer.hh  FastEventAction.hh  FastParticleSource.hh
g4sipm/: CMakeLists.txt
g4sipm/include/: FresnelUtil.hh  G4Sipm.hh  G4SipmCellId.hh  G4SipmUiMessenger.hh  G4UiMessengerUtil.hh  InterpolationUtil.hh  MaterialFactory.hh  OpticalPhysicsList.hh  Placeable.hh  Properties.hh  VectorUtil.hh
g4sipm/include/digi/: G4SipmCellFireController.hh  G4SipmDigi.hh  G4SipmDigiQueue.hh  G4SipmDigitizer.hh  G4SipmEffectiveOvervoltageCellFireController.hh  G4SipmVoltageTraceDigi.hh  G4SipmVoltageTraceDigitizer.hh
g4sipm/include/hit/: G4SipmHit.hh  G4SipmSensitiveDetector.hh  G4SipmSensitiveDetectorFilter.hh
g4sipm/include/housing/: G4SipmHousing.hh
g4sipm/include/housing/impl/: HamamatsuCeramicHousing.hh  HamamatsuSmdHousing.hh
g4sipm/include/model/: G4SipmGainMapModel.hh  G4SipmModel.hh  G4SipmModelFactory.hh  G4SipmVoltageTraceModel.hh
g4sipm/include/model/impl/: G4SipmConfigFileModel.hh  G4SipmConfigFileVoltageTraceModel.hh  G4SipmGaussianGainMapModel.hh  G4SipmGenericSipmModel.hh  G4SipmGenericVoltageTraceModel.hh  G4SipmRandomGainMapModel.hh  HamamatsuS1036211100.hh  (+6 more)
g4sipm/resources/: hamamatsu-s10362-11-100c.properties
g4sipm/src/: FresnelUtil.cc  G4Sipm.cc  G4SipmUiMessenger.cc  G4UiMessengerUtil.cc  InterpolationUtil.cc  MaterialFactory.cc  OpticalPhysicsList.cc  Placeable.cc  Properties.cc  VectorUtil.cc
g4sipm/src/digi/: G4SipmCellFireController.cc  G4SipmDigi.cc  G4SipmDigiQueue.cc  G4SipmDigitizer.cc  G4SipmEffectiveOvervoltageCellFireController.cc  G4SipmVoltageTraceDigi.cc  G4SipmVoltageTraceDigitizer.cc
g4sipm/src/hit/: G4SipmHit.cc  G4SipmSensitiveDetector.cc  G4SipmSensitiveDetectorFilter.cc
g4sipm/src/housing/: G4SipmHousing.cc  G4SipmModelFactory.cc
g4sipm/src/model/: G4SipmGainMapModel.cc  G4SipmModel.cc  G4SipmVoltageTraceModel.cc
g4sipm/test/: FresnelUtilTest.hh  G4SipmTest.hh  G4SipmUiMessengerTest.hh  InterpolationUtilTest.hh  MaterialFactoryTest.hh  PropertiesTest.hh  VectorUtilTest.hh  test.cc
g4sipm/test/digi/: G4SipmCellFireControllerTest.hh  G4SipmDigiQueueTest.hh  G4SipmDigitizerTest.hh  G4SipmVoltageTraceDigiTest.hh  G4SipmVoltageTraceDigitizerTest.hh
g4sipm/test/hit/: G4SipmSensitiveDetectorFilterTest.hh  G4SipmSensitiveDetectorTest.hh
g4sipm/test/housing/: G4SipmHousingTest.hh
g4sipm/test/model/: G4SipmModelTest.hh  G4SipmVoltageTraceModelTest.hh
g4sipm/test/sim/: TestActionInitialization.hh  TestDetectorConstruction.hh  TestEventAction.hh  TestPrimaryGeneratorAction.hh  TestRun.hh
sample/: CMakeLists.txt  README.txt  g4sipm.mac  run.mac  sample.cc  vis-qt.mac  vis-settings.mac  vis.mac
sample/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  ParticleSource.hh  ParticleSourceMessenger.hh  ProgramOptionsUtil.hh  RunAction.hh
sample/include/persistency/: JsonPersistVisitor.hh  PersistVisitor.hh  PersistVisitorFactory.hh  PersistencyHandler.hh  PersistencyHandlerMessenger.hh  RootPersistVisitor.hh  SqlitePersistVisitor.hh
sample/include/rnd/: Direction.hh  FixedValue.hh  Flat.hh  General.hh  Random.hh  ThreeVector.hh
sample/plots/: CMakeLists.txt
sample/plots/json/: CMakeLists.txt  celltriggers.py  celltriggers_time.py  demjson.py  hits_time.py  persistency.py  trace.py
sample/plots/luigi/: CMakeLists.txt  crosstalk_neighbours_pe_compare.py  darknoise_all_new.py  darknoise_cells_all.py  darknoise_delta_t_all.py  darknoise_pe_all.py  darknoise_pe_fit.py  dynamic_range_compare.py  dynamic_range_uncertainty_compare.py  n_pe.py  n_pe_all.py  overvoltage.py  pde_compare.py  relative_pde_compare.py  thermal_noise_rate.py
sample/plots/root/: CMakeLists.txt  trace.py
sample/plots/sqlite/: CMakeLists.txt  dnr.py  fresnel.py  hits.py  lseq.py  pde.py  publication.py  relative_pde.py  trace.py
sample/resources/: CMakeLists.txt  eas-particles-arrival-time.properties  gauss-100ns.properties  gauss-10ps.properties  gauss-30ns.properties  gauss-40ps.properties  gauss-80ps.properties  hamamatsu-s10362-11-100c.properties  hamamatsu-s10362-33-050c-lauscher.properties  hamamatsu-s10362-33-050c-niggemann.properties  hamamatsu-s10362-33-050c.properties  hamamatsu-s10362-33-100c-lauscher-shuntresistor.properties  hamamatsu-s10362-33-100c-lauscher.properties  hamamatsu-s13360-1325pe.properties  hamamatsu-s13360-3025pe.properties  hamamatsu-s13360-6025pe.properties  hamamatsu-s13360-6050pe.properties  kuraray-y11-3m.properties  kuraray-y11.properties  led-waveform-12ns.txt  led-waveform-35ns.txt  led-waveform-73ns.txt  saint-gobain-bcf-92.properties  sawtooth-100ps.properties  sensl-microfc-60035-sm.properties  sensl-microfj-60035-tsv.properties
sample/run/: CMakeLists.txt
sample/run/luigi/: CMakeLists.txt  README  all.py  client.cfg  config_meta_task.py  crosstalk_neighbours_simulation.py  darknoise_simulation.py  darknoise_simulation_new.py  dynamic_range_simulation.py  dynamic_range_simulation_bretz.py  dynamic_range_simulation_bretz2.py  dynamic_range_simulation_lauscher.py  dynamic_range_simulation_schumacher.py  export_run_settings.py  logging.cfg  n_pe_simulation.py  overvoltage.py  pde_simulation.py  relative_pde_simulation.py  run.py  simulation_meta_task.py  thermal_noise_rate_simulation.py
sample/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  ParticleSource.cc  ParticleSourceMessenger.cc  ProgramOptionsUtil.cc  RunAction.cc
sample/src/persistency/: JsonPersistVisitor.cc  PersistVisitor.cc  PersistVisitorFactory.cc  PersistencyHandler.cc  PersistencyHandlerMessenger.cc  RootPersistVisitor.cc  SqlitePersistVisitor.cc
sample/src/rnd/: Direction.cc  FixedValue.cc  Flat.cc  General.cc  Random.cc  ThreeVector.cc
sample/test/: test.cc
sample/test/persistency/: PersistVisitorFactoryTest.hh
sample/test/rnd/: DirectionTest.hh  FixedValueTest.hh  GeneralTest.hh  ThreeVectorTest.hh
(+59 files in other folders)
